solc_ossfuzz_seed_corpus/test_sol/test_8f42fe0a2053a8f0dcf4ab12d798fcc9271836f967c10b5387fe70a05ddd075d_61a1e2fb597ee152edfb04c6f98763302328d95d_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  uint168  public s0 = uint168(175939000657103081471315187768769639413316744646033);
  bool immutable public s1;
  constructor(bool i0)   {
    s1 = (payable(address(this)) < (((false ? bytes31(0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff) : bytes31(0x2221bfee745fb235598e0ed5c1bd1b4584e85c12aade634fdc41c86a845a89)) <= bytes31(0x00000000000000000000000000000000000000000000000000000000000000)) ? payable(address(this)) : payable(address(this))));
    {
      s0 >>= (uint168((((uint168(352634813561869355246034197080248347447273787478487) * (uint168(243207853129523449348453135849054366729998482645959) | uint168(348691934699689921070629220937424140165982245281983))) << uint152(uint152(2196173980190316527517365420340954786451044773))) / uint168(242298563862706750315251105450254976256599273651440))) ^ uint168(0));
      uint168  l0 = s0;
      uint168  l1 = l0;
      assert(l1 == s0);
      uint168  l2 = s0;
      uint168  l3 = l2;
      assert(l3 == s0);
      (s0) = ((true ? uint168(357319130301031755106251165797648946392950072448089) : (false ? (uint168(200944353628598610245534089011501123815373763462897) + uint168(374144419156711147060143317175368453031918731001855)) : uint168(308349488598543554124085433045485328771996791352498))));
      assert(s0 == (true ? uint168(357319130301031755106251165797648946392950072448089) : (false ? (uint168(200944353628598610245534089011501123815373763462897) + uint168(374144419156711147060143317175368453031918731001855)) : uint168(308349488598543554124085433045485328771996791352498))));
      (bool l4, bytes memory l5) = address(this).call((((false ? true : false) ? false : true) ? bytes("ffffffffffffffffffffffffffffffffffffffffffffffffff") : bytes("ffffff00000000000000000000000000000000000000000000000000")));
      bool  l6 = s1;
      bool  l7 = l6;
      assert(l7 == s1);
      (bool l8, bytes memory l9) = address(this).call(bytes("ffffffffffffffffffffffffffffffffffffffffffffffffff0000000000000000000000000000000000000000"));
    }
  }
  function f0() public virtual  payable returns(address payable[] memory o0,address o1)
  {
    revert(string(bytes("ffffffffffffffffffffffffffffffffffffffffffff58e9a0b60f9cc7")));
  }
  fallback() external   
  {
    uint168  l0 = s0;
    uint168  l1 = l0;
    assert(l1 == s0);
    assembly
    {
      switch l0
      case 0
      {
        let al0 := l0
      }
      {
      }
      extcodecopy(l1, add(0x80, mod(caller(), 1024)), slt(l1, 11112988056723120387648277374890063755112855942290747223715006389527312470663), mod(l1, 1024))
    }
  }
  struct St0 {
    address el0;
  }
}
pragma solidity >= 0.0.0;
contract C1 is C0 {
  int64  public s2 = int64(7951238592131106035);
  address   s3 = address(this);
  bytes1   s4 = bytes1(0xff);
  C0   s5;
  constructor(C0 i0) payable C0(true)
  {
    s5 = new C0(true);
    unchecked {
      for(      int200 l0 = (int200(803469022129495137770981046170581301261101496891396417650687) | ((int200(-44001164707143443966521168968236637050256965142123276444689) % (int200(-535143144656082896210247681187387339120903356339508086836785) * int200(0))) - int200(803469022129495137770981046170581301261101496891396417650687)));
;
)
      {
        continue;
      }
      int64  l1 = s2;
      int64  l2 = l1;
      assert(l2 == s2);
      C0  l3 = s5;
      C0  l4 = l3;
      assert(l4 == s5);
      C0  l5 = s5;
      C0  l6 = l5;
      assert(l6 == s5);
      C0  l7 = s5;
      C0  l8 = l7;
      assert(l8 == s5);
    }
  }
  function f0() public virtual override  payable returns(address payable[] memory o0,address o1)
  {
    revert(string("000000000000000000000000000000005ac4f46c1abdca8cd349e5a881ef5b9697bbdf16e32633bc29"));
  }
}
// ----
// Warning 5667: (su0.sol:141-148): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:1582-1589): Unused local variable.
// Warning 2072: (su0.sol:1591-1606): Unused local variable.
// Warning 2072: (su0.sol:1876-1883): Unused local variable.
// Warning 2072: (su0.sol:1885-1900): Unused local variable.
// Warning 5667: (su0.sol:2083-2110): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:2111-2121): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:2804-2809): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:2887-2896): Unused local variable.
// Warning 5667: (su0.sol:3562-3589): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:3590-3600): Unused function parameter. Remove or comment out the variable name to silence this warning.
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
